--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </p><h4>Suporte</h4><h5>Suporte@gmail.com</h5></div>
             <div style="padding-top:50px;" class="footer_card"><h4>Informe</h4>​  <a href="#">Trabalhe conosco</a> <br><a href="#">Estagie conosco</a><br><a href="#">Tutoriais </a><br><a href="#">Cadastre</a>
             </div>
-            <div style="padding-top:50px;" class="footer_card"><h3 style="margin-left: 60px;margin-bottom: 15px;">DIGITE</h3><input type="text" placeholder="Digite seu Email"> <input type="text" placeholder="Digite seu Numero"> <input type="submit"></div>
+            <div style="padding-top:50px;" class="footer_card"><h3 style="text-align: center;">DIGITE</h3><input type="text" placeholder="Digite seu Email"> <input type="text" placeholder="Digite seu Numero"> <input type="submit"></div>
         </footer>
         </div>
          
